--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.245.0/containers/docker-existing-dockerfile
 {
-	"name": "BrownBoost",
+	"name": "SHAPLYVALUE",
 
 	// Sets the run context to one level up instead of the .devcontainer folder.
 	"context": "..",
@@ -13,13 +13,13 @@
 	// 	"--gpus",
 	// 	"all",
 	// 	"-v",
-	// 	"${localEnv:DATAHOME}/BrownBoost/save:/workspaces/BrownBoost/src/save",
+	// 	"${localEnv:DATAHOME}/SHAPLYVALUE/save:/workspaces/SHAPLYVALUE/src/save",
 	// 	"-v",
-	// 	"${localEnv:DATAHOME}/BrownBoost/pid_working_logs:/workspaces/BrownBoost/src/pid_working_logs",
+	// 	"${localEnv:DATAHOME}/SHAPLYVALUE/pid_working_logs:/workspaces/SHAPLYVALUE/src/pid_working_logs",
 	// 	"-v",
-	// 	"${localEnv:DATAHOME}/BrownBoost/rawdata:/workspaces/BrownBoost/src/datasets/rawdata"
+	// 	"${localEnv:DATAHOME}/SHAPLYVALUE/rawdata:/workspaces/SHAPLYVALUE/src/datasets/rawdata"
 	// ],
-	"remoteEnv": {"PYTHONPATH": "${containerEnv:PATH}:/workspaces/BrownBoost/src"},
+	"remoteEnv": {"PYTHONPATH": "${containerEnv:PATH}:/workspaces/SHAPLYVALUE/src"},
 	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [8888, 8787, 8786],
